@@ -1,9 +1,0 @@
-﻿using Terraria.ModLoader;
-using Terraria.ModLoader.IO;
-
-namespace Verdant.NPCs
-{
-    class VerdantNPCWorld : ModSystem
-    {
-    }
-}
